tests/paczka1/small_fuzzy/42691495.err
Error in line 9: S566 A395 210,2
Error in line 16: S6KiWqQM A395 12,10
